@@ -1,9 +1,40 @@
 <html>
 <body>
 
-<h1 align='right'><a name='LICENSE'>A - GNU Library General
-Public License</a></h1>
+<h1 align='right'><a name='LICENSE'>A - Mini-XML License</a></h1>
 
+<p align='center'>October 18, 2005</p>
+
+<p>The Mini-XML library and included programs are provided under
+the terms of the GNU Library General Public License (LGPL) with
+the following exceptions:</p>
+
+<ol>
+
+	<li>Static linking of applications to the Mini-XML
+	library does not constitute a derivative work and does
+	not require the author to provide source code for the
+	application, use the shared Mini-XML libraries, or link
+	their applications against a user-supplied version of
+	Mini-XML.
+
+	<p><i>If you link the application to a modified version
+	of Mini-XML, then the changes to Mini-XML must be
+	provided under the terms of the LGPL in sections 1, 2,
+	and 4.</i></p>
+	</li>
+
+	<li>You do not have to provide a copy of the Mini-XML
+	license with programs that are linked to the Mini-XML
+	library, nor do you have to identify the Mini-XML license
+	in your program or documentation as required by section 6
+	of the LGPL.</li>
+
+</ol>
+
+<hr noshade>
+
+<p align=center><big>GNU LIBRARY GENERAL PUBLIC LICENSE</big></p>
 <p align='center'>Version 2, June 1991
 <br />Copyright (C) 1991 Free Software Foundation, Inc.
 <br />59 Temple Place - Suite 330, Boston, MA 02111-1307, USA
